src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expr
Rule 1     expr -> expr CAT expr
Rule 2     expr -> expr ADD expr
Rule 3     expr -> expr SUB expr
Rule 4     expr -> expr MUL expr
Rule 5     expr -> expr DIV expr
Rule 6     expr -> expr MOD expr
Rule 7     expr -> expr FDIV expr
Rule 8     expr -> expr LOG expr
Rule 9     expr -> expr EXP expr
Rule 10    expr -> expr DIE expr
Rule 11    expr -> MACRO REP expr
Rule 12    expr -> SUM expr
Rule 13    expr -> AVG expr
Rule 14    expr -> SAMM expr
Rule 15    expr -> expr LOW expr
Rule 16    expr -> expr HIGH expr
Rule 17    expr -> LPAR expr RPAR
Rule 18    expr -> NUMBER
Rule 19    expr -> var
Rule 20    var -> LAST
Rule 21    expr -> LBRK elements RBRK
Rule 22    elements -> elements COM expr
Rule 23    elements -> expr

Terminals, with rules where they appear

ADD                  : 2
AVG                  : 13
CAT                  : 1
COM                  : 22
DIE                  : 10
DIV                  : 5
EXP                  : 9
FDIV                 : 7
HIGH                 : 16
LAST                 : 20
LBRK                 : 21
LOG                  : 8
LOW                  : 15
LPAR                 : 17
MACRO                : 11
MOD                  : 6
MUL                  : 4
NUMBER               : 18
RBRK                 : 21
REP                  : 11
RPAR                 : 17
SAMM                 : 14
SUB                  : 3
SUM                  : 12
error                : 

Nonterminals, with rules where they appear

elements             : 21 22
expr                 : 1 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 12 13 14 15 15 16 16 17 22 23 0
var                  : 19

Parsing method: LALR

state 0

    (0) S' -> . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 1
    var                            shift and go to state 8

state 1

    (0) S' -> expr .
    (1) expr -> expr . CAT expr
    (2) expr -> expr . ADD expr
    (3) expr -> expr . SUB expr
    (4) expr -> expr . MUL expr
    (5) expr -> expr . DIV expr
    (6) expr -> expr . MOD expr
    (7) expr -> expr . FDIV expr
    (8) expr -> expr . LOG expr
    (9) expr -> expr . EXP expr
    (10) expr -> expr . DIE expr
    (15) expr -> expr . LOW expr
    (16) expr -> expr . HIGH expr

    CAT             shift and go to state 11
    ADD             shift and go to state 12
    SUB             shift and go to state 13
    MUL             shift and go to state 14
    DIV             shift and go to state 15
    MOD             shift and go to state 16
    FDIV            shift and go to state 17
    LOG             shift and go to state 18
    EXP             shift and go to state 19
    DIE             shift and go to state 20
    LOW             shift and go to state 21
    HIGH            shift and go to state 22


state 2

    (11) expr -> MACRO . REP expr

    REP             shift and go to state 23


state 3

    (12) expr -> SUM . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 24
    var                            shift and go to state 8

state 4

    (13) expr -> AVG . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 25
    var                            shift and go to state 8

state 5

    (14) expr -> SAMM . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 26
    var                            shift and go to state 8

state 6

    (17) expr -> LPAR . expr RPAR
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 27
    var                            shift and go to state 8

state 7

    (18) expr -> NUMBER .

    CAT             reduce using rule 18 (expr -> NUMBER .)
    ADD             reduce using rule 18 (expr -> NUMBER .)
    SUB             reduce using rule 18 (expr -> NUMBER .)
    MUL             reduce using rule 18 (expr -> NUMBER .)
    DIV             reduce using rule 18 (expr -> NUMBER .)
    MOD             reduce using rule 18 (expr -> NUMBER .)
    FDIV            reduce using rule 18 (expr -> NUMBER .)
    LOG             reduce using rule 18 (expr -> NUMBER .)
    EXP             reduce using rule 18 (expr -> NUMBER .)
    DIE             reduce using rule 18 (expr -> NUMBER .)
    LOW             reduce using rule 18 (expr -> NUMBER .)
    HIGH            reduce using rule 18 (expr -> NUMBER .)
    $end            reduce using rule 18 (expr -> NUMBER .)
    RPAR            reduce using rule 18 (expr -> NUMBER .)
    RBRK            reduce using rule 18 (expr -> NUMBER .)
    COM             reduce using rule 18 (expr -> NUMBER .)


state 8

    (19) expr -> var .

    CAT             reduce using rule 19 (expr -> var .)
    ADD             reduce using rule 19 (expr -> var .)
    SUB             reduce using rule 19 (expr -> var .)
    MUL             reduce using rule 19 (expr -> var .)
    DIV             reduce using rule 19 (expr -> var .)
    MOD             reduce using rule 19 (expr -> var .)
    FDIV            reduce using rule 19 (expr -> var .)
    LOG             reduce using rule 19 (expr -> var .)
    EXP             reduce using rule 19 (expr -> var .)
    DIE             reduce using rule 19 (expr -> var .)
    LOW             reduce using rule 19 (expr -> var .)
    HIGH            reduce using rule 19 (expr -> var .)
    $end            reduce using rule 19 (expr -> var .)
    RPAR            reduce using rule 19 (expr -> var .)
    RBRK            reduce using rule 19 (expr -> var .)
    COM             reduce using rule 19 (expr -> var .)


state 9

    (21) expr -> LBRK . elements RBRK
    (22) elements -> . elements COM expr
    (23) elements -> . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    elements                       shift and go to state 28
    expr                           shift and go to state 29
    var                            shift and go to state 8

state 10

    (20) var -> LAST .

    CAT             reduce using rule 20 (var -> LAST .)
    ADD             reduce using rule 20 (var -> LAST .)
    SUB             reduce using rule 20 (var -> LAST .)
    MUL             reduce using rule 20 (var -> LAST .)
    DIV             reduce using rule 20 (var -> LAST .)
    MOD             reduce using rule 20 (var -> LAST .)
    FDIV            reduce using rule 20 (var -> LAST .)
    LOG             reduce using rule 20 (var -> LAST .)
    EXP             reduce using rule 20 (var -> LAST .)
    DIE             reduce using rule 20 (var -> LAST .)
    LOW             reduce using rule 20 (var -> LAST .)
    HIGH            reduce using rule 20 (var -> LAST .)
    $end            reduce using rule 20 (var -> LAST .)
    RPAR            reduce using rule 20 (var -> LAST .)
    RBRK            reduce using rule 20 (var -> LAST .)
    COM             reduce using rule 20 (var -> LAST .)


state 11

    (1) expr -> expr CAT . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 30
    var                            shift and go to state 8

state 12

    (2) expr -> expr ADD . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 31
    var                            shift and go to state 8

state 13

    (3) expr -> expr SUB . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 32
    var                            shift and go to state 8

state 14

    (4) expr -> expr MUL . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 33
    var                            shift and go to state 8

state 15

    (5) expr -> expr DIV . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 34
    var                            shift and go to state 8

state 16

    (6) expr -> expr MOD . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 35
    var                            shift and go to state 8

state 17

    (7) expr -> expr FDIV . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 36
    var                            shift and go to state 8

state 18

    (8) expr -> expr LOG . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 37
    var                            shift and go to state 8

state 19

    (9) expr -> expr EXP . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 38
    var                            shift and go to state 8

state 20

    (10) expr -> expr DIE . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 39
    var                            shift and go to state 8

state 21

    (15) expr -> expr LOW . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 40
    var                            shift and go to state 8

state 22

    (16) expr -> expr HIGH . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 41
    var                            shift and go to state 8

state 23

    (11) expr -> MACRO REP . expr
    (1) expr -> . expr CAT expr
    (2) expr -> . expr ADD expr
    (3) expr -> . expr SUB expr
    (4) expr -> . expr MUL expr
    (5) expr -> . expr DIV expr
    (6) expr -> . expr MOD expr
    (7) expr -> . expr FDIV expr
    (8) expr -> . expr LOG expr
    (9) expr -> . expr EXP expr
    (10) expr -> . expr DIE expr
    (11) expr -> . MACRO REP expr
    (12) expr -> . SUM expr
    (13) expr -> . AVG expr
    (14) expr -> . SAMM expr
    (15) expr -> . expr LOW expr
    (16) expr -> . expr HIGH expr
    (17) expr -> . LPAR expr RPAR
    (18) expr -> . NUMBER
    (19) expr -> . var
    (21) expr -> . LBRK elements RBRK
    (20) var -> . LAST

    MACRO           shift and go to state 2
    SUM             shift and go to state 3
    AVG             shift and go to state 4
    SAMM            shift and go to state 5
    LPAR            shift and go to state 6
    NUMBER          shift and go to state 7
    LBRK            shift and go to state 9
    LAST            shift and go to state 10

    expr                           shift and go to state 42
    var                            shift and go to state 8

state 24

    (12) expr -> SUM expr .
    (1) expr -> expr . CAT expr
    (2) expr -> expr . ADD expr
    (3) expr -> expr . SUB expr
    (4) expr -> expr . MUL expr
    (5) expr -> expr . DIV expr
    (6) expr -> expr . MOD expr
    (7) expr -> expr . FDIV expr
    (8) expr -> expr . LOG expr
    (9) expr -> expr . EXP expr
    (10) expr -> expr . DIE expr
    (15) expr -> expr . LOW expr
    (16) expr -> expr . HIGH expr

    CAT             reduce using rule 12 (expr -> SUM expr .)
    ADD             reduce using rule 12 (expr -> SUM expr .)
    SUB             reduce using rule 12 (expr -> SUM expr .)
    MUL             reduce using rule 12 (expr -> SUM expr .)
    DIV             reduce using rule 12 (expr -> SUM expr .)
    MOD             reduce using rule 12 (expr -> SUM expr .)
    FDIV            reduce using rule 12 (expr -> SUM expr .)
    LOG             reduce using rule 12 (expr -> SUM expr .)
    EXP             reduce using rule 12 (expr -> SUM expr .)
    $end            reduce using rule 12 (expr -> SUM expr .)
    RPAR            reduce using rule 12 (expr -> SUM expr .)
    RBRK            reduce using rule 12 (expr -> SUM expr .)
    COM             reduce using rule 12 (expr -> SUM expr .)
    DIE             shift and go to state 20
    LOW             shift and go to state 21
    HIGH            shift and go to state 22

  ! DIE             [ reduce using rule 12 (expr -> SUM expr .) ]
  ! LOW             [ reduce using rule 12 (expr -> SUM expr .) ]
  ! HIGH            [ reduce using rule 12 (expr -> SUM expr .) ]
  ! CAT             [ shift and go to state 11 ]
  ! ADD             [ shift and go to state 12 ]
  ! SUB             [ shift and go to state 13 ]
  ! MUL             [ shift and go to state 14 ]
  ! DIV             [ shift and go to state 15 ]
  ! MOD             [ shift and go to state 16 ]
  ! FDIV            [ shift and go to state 17 ]
  ! LOG             [ shift and go to state 18 ]
  ! EXP             [ shift and go to state 19 ]


state 25

    (13) expr -> AVG expr .
    (1) expr -> expr . CAT expr
    (2) expr -> expr . ADD expr
    (3) expr -> expr . SUB expr
    (4) expr -> expr . MUL expr
    (5) expr -> expr . DIV expr
    (6) expr -> expr . MOD expr
    (7) expr -> expr . FDIV expr
    (8) expr -> expr . LOG expr
    (9) expr -> expr . EXP expr
    (10) expr -> expr . DIE expr
    (15) expr -> expr . LOW expr
    (16) expr -> expr . HIGH expr

    CAT             reduce using rule 13 (expr -> AVG expr .)
    ADD             reduce using rule 13 (expr -> AVG expr .)
    SUB             reduce using rule 13 (expr -> AVG expr .)
    MUL             reduce using rule 13 (expr -> AVG expr .)
    DIV             reduce using rule 13 (expr -> AVG expr .)
    MOD             reduce using rule 13 (expr -> AVG expr .)
    FDIV            reduce using rule 13 (expr -> AVG expr .)
    LOG             reduce using rule 13 (expr -> AVG expr .)
    EXP             reduce using rule 13 (expr -> AVG expr .)
    $end            reduce using rule 13 (expr -> AVG expr .)
    RPAR            reduce using rule 13 (expr -> AVG expr .)
    RBRK            reduce using rule 13 (expr -> AVG expr .)
    COM             reduce using rule 13 (expr -> AVG expr .)
    DIE             shift and go to state 20
    LOW             shift and go to state 21
    HIGH            shift and go to state 22

  ! DIE             [ reduce using rule 13 (expr -> AVG expr .) ]
  ! LOW             [ reduce using rule 13 (expr -> AVG expr .) ]
  ! HIGH            [ reduce using rule 13 (expr -> AVG expr .) ]
  ! CAT             [ shift and go to state 11 ]
  ! ADD             [ shift and go to state 12 ]
  ! SUB             [ shift and go to state 13 ]
  ! MUL             [ shift and go to state 14 ]
  ! DIV             [ shift and go to state 15 ]
  ! MOD             [ shift and go to state 16 ]
  ! FDIV            [ shift and go to state 17 ]
  ! LOG             [ shift and go to state 18 ]
  ! EXP             [ shift and go to state 19 ]


state 26

    (14) expr -> SAMM expr .
    (1) expr -> expr . CAT expr
    (2) expr -> expr . ADD expr
    (3) expr -> expr . SUB expr
    (4) expr -> expr . MUL expr
    (5) expr -> expr . DIV expr
    (6) expr -> expr . MOD expr
    (7) expr -> expr . FDIV expr
    (8) expr -> expr . LOG expr
    (9) expr -> expr . EXP expr
    (10) expr -> expr . DIE expr
    (15) expr -> expr . LOW expr
    (16) expr -> expr . HIGH expr
